<resources>
    <string name="app_name">Tutor</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="admin_login">Admin Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="student_login">Student Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="signUp">SignUp</string>
</resources>
