<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.ujjwal.tutor.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
        android:text="@string/admin_login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cast_expanded_controller_progress_text_color"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="45dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="63dp"
        android:background="@color/cast_expanded_controller_progress_text_color"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="120dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="19dp"
        android:background="@color/cast_expanded_controller_text_color"
        android:hint="@string/enter_password"
        android:inputType="textPassword|textVisiblePassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:text="@string/signUp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="82dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="148dp"
        android:layout_marginRight="148dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="106dp"
        android:background="@color/colorPrimary"
        android:text="@string/student_login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cast_expanded_controller_progress_text_color"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/googleBtn"
        app:layout_constraintRight_toRightOf="@+id/googleBtn"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintTop_toTopOf="@+id/buttonSignIn"
        android:layout_marginRight="106dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

    </com.google.android.gms.common.SignInButton>
</android.support.constraint.ConstraintLayout>